Re-fixed navbars.css body spacing issue

--- a/src/main/webapp/css/navbars.css
+++ b/src/main/webapp/css/navbars.css
@@ -7,6 +7,6 @@
 	margin-bottom: 0px;
 }
 
-.body {
+body {
 	padding-top: 50px;
 }
